Pagina usando css

--- a/estatica-css/index.html
+++ b/estatica-css/index.html
@@ -6,16 +6,17 @@
   </head>
   <body>
 	<center>
-		<h1><em>Sistemas da Informação I</em></h1>
+		<h1 style="font-family:courier;"><em>Sistemas da Informação I</em></h1>
+		
 	</center>
 	
-	<h4>Informações gerais</h4>
+	<h3 style="padding:5px;border:1px solid purple;">Informações gerais</h3>
 	<p>O objetivo da disciplina é discutir técnicas de projeto de
 		software. Haverá foco particular em técnicas utilizadas para melhorar
 		o reuso e a flexibilidade de software desenvolvido usando Orientação a
 		Objeto, mas discutiremos também projeto arquitetural.</p>
 		
-	<h3>Sobre o curso</h3>
+	<h3 style="padding:5px;border:1px solid purple;">Sobre o curso</h3>
 	<h4>Conteúdo</h4>
 
 	<p>Fundamentos; princípios de design (modularidade, coesão,
@@ -24,7 +25,7 @@
 		abstração, herança, interfaces; bibliotecas e frameworks; padrões de
 		design; noções de arquitetura de software.</p>
 	
-	<h4>Objetivos</h4>
+	<h3 style="padding:5px;border:1px solid purple;">Objetivos</h3>
 	No final do curso, o aluno deve ser capaz de:
 	<ol>
 		<li>Descrever os objetivos do projeto de software e seu papel no desenvolvimento de um software</li>
@@ -39,7 +40,8 @@
 		<li>Criar software multithreaded</li>
 	</ol>
 	
-	<em><b>Se depois de conhecer um pouco da disciplina você se convenceu de que vale a pena pagá-la nesse período,
+	<em style="background-color: #FFE4E1; "><b>
+		Se depois de conhecer um pouco da disciplina você se convenceu de que vale a pena pagá-la nesse período,
 		clique em "Me convenci" :)</b></em>
 		
 	<br></br>
